jquery.ez.menu.css
/*
 *  EZ-Menu
 *  An easy way to create a navigation menu from JSON
 *
 *  Copyright 2012, Marc S. Brooks (http://mbrooks.info)
 *  Licensed under the MIT license:
 *  http://www.opensource.org/licenses/mit-license.php
 *
 *  Dependencies:
 *    jquery.js
 */

ul.ez_menu {
	background-color: #DDDDDD;
	border: 1px solid #FFFFFF;
	border-bottom: 1px solid #CCCCCC;
	cursor: pointer;
	height: 31px;
	left: 0px;
	list-style-type: none;
	margin: 0px;
	padding: 0px;
	position: fixed;
	top: 0px;
	width: 100%;
}

ul.ez_menu li{
	float: left;
	font-weight: bold;
	padding: 8px 12px 4px 12px;
	position: relative;
	z-index: 10;
}

ul.ez_menu li a {
	display: block;
}

ul.ez_menu li a:hover {
	text-decoration: none;
}

ul.ez_menu li.menu_hover_on {
	background-color: #EEEEEE;
}

ul.ez_menu li.menu_hover_on a {
	color: #000000;
}

ul.ez_menu li.menu_hover_off {
	background-color: #DDDDDD;
}

ul.ez_menu li.submenu_hover_on {
	background: #FFFFFF url( images/arrow_asc.gif ) no-repeat right center;
	padding-right: 20px;
}

ul.ez_menu li.submenu_hover_on a {
	color: #000000;
}

ul.ez_menu li.submenu_hover_off {
	background: #DDDDDD none;
	padding-right: 6px;
}

ul.ez_menu ul.menu_list {
	background-color: #FFFFFF;
	border: 1px solid #DDDDDD;
	border-top: none;
	display: none;
	left: -1px;
	list-style-type: none;
	padding: 0px;
	position: absolute;
	top: 31px;
	white-space: nowrap;
	width: 150px;
}

ul.ez_menu ul.menu_list li {
	font-weight: normal;
	padding: 0px;
	width: 100%;
}

ul.ez_menu li.submenu_hover_on ul.menu_list li a {
	color: #787878;
	display: block;
	height: 16px;
	padding: 6px 10px 6px 10px;
	width: auto;
}

ul.ez_menu ul.menu_list li a:hover {
	text-decoration: none;
}

ul.ez_menu ul.menu_list li.submenu {
	border-top: 1px dashed #DDDDDD;
}

ul.ez_menu ul.menu_list li.submenu ul {
	border: 1px solid #DDDDDD;
	left: 100%;
	top: -1px;
}

ul.ez_menu ul.menu_list a.opt_hover_on {
	background-color: #F5F5F5;
}

ul.ez_menu ul.menu_list span.opt_hover_off {
	background-color: #FFFFFF;
}

